# mobile-augmented-reality-system

./: LICENSE  README.md
client/: README.md  app.py  settings.gradle
client/app/: build.gradle
docs/: README.md
server/: CMakeLists.txt  README.md  main.cpp  mars.h  mars.sh
server/control/: README.md
server/control/controlProtocol/: README.md  controlProtocol.cpp  controlProtocol.h
server/models/: android-model.py  create-mobilenet-pretrained-model-android.py  create-mobilenet-pretrained-model-cuda.py  create-resnet-pretrained-model.py
server/stream/: README.md  packet.cpp  packet.h  stream.cpp  stream.h
server/stream/threads/: README.md  decode.cpp  decode.h  encode.cpp  encode.h  inference.cpp  inference.h  receive.cpp  receive.h  send.cpp  send.h
server/stream/threads/implementations/pytorch/: inference_strawberry.cpp  inference_strawberry.h  strawberry.cpp  strawberry.h
server/stream/threads/implementations/tcp_jpg/: inference_tcp.cpp  inference_tcp.h  receive_tcp.cpp  receive_tcp.h  send_tcp.cpp  send_tcp.h
server/stream/threads/implementations/test0/: decode_h264.cpp  decode_h264.h  encode_h264.cpp  encode_h264.h  inference_frame_counter.cpp  inference_frame_counter.h  receive_rtp_h264.cpp  receive_rtp_h264.h  send_h264_rtp.cpp  send_h264_rtp.h
server/stream/threads/implementations/test1/: decode_test1.cpp  decode_test1.h  encode_test1.cpp  encode_test1.h  graphproblem.cu  graphproblem.h  inference_test1.cpp  inference_test1.h  receive_test1.cpp  receive_test1.h  send_test1.cpp  send_test1.h
server/test/: Makefile  testclient.cpp
(+10 files in other folders)
